# AutoSketch

./: .gitignore  CMakeLists.txt  compiler.py  readme.md
apps/: CMakeLists.txt
apps/common/: headers.p4
apps/ddos/: ddos.p4  p4conf.json
apps/newconn/: newconn.p4  p4conf.json
apps/portscan/: p4conf.json  portscan.p4
apps/superspreader/: p4conf.json  superspreader.p4
apps/synflood/: p4conf.json  synflood.p4
apps/tcp_nm/: switch.p4
backend/p4/: _register_table.py  _statement.py  _struct_definition.py  _switch_egress.py  _template.py  p4.py
examples/: ddos.py  newconn.py  portscan.py  superspreader.py  synflood.py
front/: operators.py  packetstream.py  symboltable.py  task.py
ir/: ir.py  resona.py
search/: Makefile.jinja  __init__.py  conf.json.jinja  search.cpp.jinja
search/include/: CMakeLists.txt  Conf.hpp  Hash.hpp  Query.hpp  Register.hpp  Search.hpp  Trace.hpp  conf.json  search-ddos.cpp
trace/: .gitignore  CMakeLists.txt  README.md  packet.c  packet.h  pcap_preprocess.c  tuple.h  util.h
